[workspace]
members = ["packages/*", "scripts"]
resolver = "2"

[workspace.package]
authors = ["Nixy <info@nixy.software>"]
description = "OpenAPI client for SNT Hornet."
edition = "2024"
license = "MIT"
repository = "https://github.com/NixySoftware/snt-hornet"
version = "1.0.1"

[workspace.dependencies]
